# dxnote

./: .env  .gitignore  Cargo.toml  Dioxus.toml  dioxus::spawn.md  docker-compose.yml  use_auto_save() 코드 문제점.md  디바운스.md  백업.md  설계도.md  원본.md
assets/: main.css
md/: .clone()없애기.md  Note원본.md  let saved.md  psql 연결 gemini.md  psql 연결 gpt.md  rsx!원본.md  save_resource.md  use_effect() 사용.md  개발노트.md  단순클릭만으로 리스트 변경 문제.md  사이드바rust로직.md  실시간저장코드.md  앱 포커스 런타임시 설정 코드.md
src/: components.rs  config.rs  db.rs  hooks.rs  lib.rs  main.rs  note.rs
