[package]
name = "dxnote"
version = "0.1.0"
authors = ["omelet3032 <omelet3032@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
dioxus = { version = "0.7.1", features = [] }
sqlx = "0.8.6"
tokio = "1.52.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
